--- a/Task-2/css/style.css
+++ b/Task-2/css/style.css
@@ -1,1 +1,33 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header nav {
+  padding: 15px;
+}
+header nav a {
+  color: #666666;
+  font-size: 14px;
+  font-weight: 300;
+  text-decoration: none;
+  margin-right: 24px;
+}
+header nav a:hover {
+  text-decoration: underline;
+}
+header nav #Karyera {
+  color: #0056c1;
+  display: inline-block;
+  font-weight: 500;
+  padding: 6px 12px;
+  border: 1.5px solid #0056c1;
+  border-radius: 40px;
+  transition: 0.4s;
+}
+header nav #Karyera:hover {
+  color: #ffffff;
+  background-color: #0056c1;
+  text-decoration: none;
+}/*# sourceMappingURL=style.css.map */
